@@ -9,6 +9,8 @@ Nagios 2.x Change Log
 * Bug fix for using servicegroups in service dependency definitions
 * Bug fix for bad date format submission in command CGI
 * Possible segfault fix during restarts when daemon was performing host checks
+* Fix for missing check timeout in event broker calls
+* Fix for handling signals under NPTL
 
 
 
